--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -359,6 +359,8 @@
         
         .founder-contact {
             margin-top: 30px;
+            align-content: center;
+            justify-content: center;
         }
         
         .contact-detail {
